[refactor] Use ReflectiveOperationException